--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0"
+    "babel-register": "^6.18.0",
+    "nodemon": "^1.11.0"
   }
 }
