--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
+    "realm": "^0.15.4",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
